--- a/book/_config.yml
+++ b/book/_config.yml
@@ -3,7 +3,7 @@
 
 title: "Custom binary snow maps with camera traps"
 author: Catherine Breen, University of Washington
-logo: img/GeoSMART_logo.svg
+logo: img/modis_book.svg
 only_build_toc_files: true
 
 # Add GitHub buttons to your book
