--- a/book/_config.yml
+++ b/book/_config.yml
@@ -19,7 +19,7 @@ parse:
   # https://jupyterbook.org/content/content-blocks.html?highlight=myst%20substitution#define-substitutions-for-your-whole-book
   # https://jupyterbook.org/content/content-blocks.html#using-substitutions-in-links
   myst_substitutions:
-    website_url: "https://geo-smart.github.io/use_case_template"
+    website_url: "https://geo-smart.github.io/use_case_template" ## cat edit to new website https://github.com/catherine-m-breen/binarysnowmaps.git?
   myst_enable_extensions:
     # Defaults
     - dollarmath
