--- a/book/_config.yml
+++ b/book/_config.yml
@@ -51,7 +51,7 @@ launch_buttons:
 
 # Information about where the book exists on the web
 repository:
-  url: https://github.com/catherine-m-breen/binarysnowmaps # Online location of your book
+  url: https://catherine-m-breen.github.io/binarysnowmaps # Online location of your book
   path_to_book: book  # Optional path to your book, relative to the repository root
   branch: main  # Which branch of the repository should be used when creating links (optional)
 
